@@ -18,6 +18,9 @@ along with GNU Zebra; see the file COPYING.  If not, write to the Free
 Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 02111-1307, USA.  */
 
+#ifndef _QUAGGA_BGP_NEXTHOP_H
+#define _QUAGGA_BGP_NEXTHOP_H
+
 #define BGP_SCAN_INTERVAL_DEFAULT   60
 #define BGP_IMPORT_INTERVAL_DEFAULT 15
 
@@ -50,3 +53,5 @@ int bgp_multiaccess_check_v4 (struct in_addr, char *);
 int bgp_config_write_scan_time (struct vty *);
 int bgp_nexthop_check_ebgp (afi_t, struct attr *);
 int bgp_nexthop_self (afi_t, struct attr *);
+
+#endif /* _QUAGGA_BGP_NEXTHOP_H */
