@@ -18,5 +18,10 @@ along with GNU Zebra; see the file COPYING.  If not, write to the Free
 Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 02111-1307, USA.  */
 
+#ifndef _QUAGGA_BGP_VTY_H
+#define _QUAGGA_BGP_VTY_H
+
 void bgp_vty_init ();
 char *afi_safi_print (afi_t, safi_t);
+
+#endif /* _QUAGGA_BGP_VTY_H */
